style.css
/********** Main styles **********/

section, header {
	width: 100%;
	overflow: hidden;
}

h1, h2 {
	text-align: center;
}

*, *::after, *::before {
	box-sizing: border-box;
}

/********** Fonts **********/

@font-face {
    font-family: 'pt_sans_narrowregular';
    src: url('fonts/PTN57F-webfont.eot');
    src: url('fonts/PTN57F-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/PTN57F-webfont.woff') format('woff'),
         url('fonts/PTN57F-webfont.ttf') format('truetype'),
         url('fonts/PTN57F-webfont.svg#pt_sans_narrowregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'droid_sansbold';
    src: url('fonts/DroidSans-Bold-webfont.eot');
    src: url('fonts/DroidSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/DroidSans-Bold-webfont.woff') format('woff'),
         url('fonts/DroidSans-Bold-webfont.ttf') format('truetype'),
         url('fonts/DroidSans-Bold-webfont.svg#droid_sansbold') format('svg');
    font-weight: normal;
    font-style: normal;
}

body {
	font-family: Tahoma, Arial, Helvetica, "Microsoft YaHei New", "Microsoft Yahei", "微软雅黑", 宋体, SimSun, STXihei, "华文细黑", sans-serif;
}

/********** Header **********/

header {
	background: url(img/header.jpg) no-repeat center center;
	background-size: cover;
	color: white;
	font-family: 'droid_sansbold';
}

header > a {
	border: 1px solid white;
	border-radius: 3px;
	color: white;
	display: block;
	margin: 50px auto;
	padding: 5px 0;
	text-align: center;
	text-decoration: none;
	width: 200px;
	font-size: 2em;
}

header > h2 {
	border-bottom: 1px solid white;
	border-top: 1px solid white;
	margin: 10px auto;
	width: 10em;
	padding: 6px;
	font-weight: normal;
	font-family: Century Gothic, sans-serif;
}

header > div {
	text-align: center;
	font-family: Candara,Calibri,Segoe,Segoe UI,Optima,Arial,sans-serif;
	font-size: 12pt;
}

header > h1 {
	margin: 10px 0;
	padding-top: 200px;
	background: url("img/logo.png") no-repeat scroll center 70px / 100px auto transparent;
	font-size: 2.5em;
}

/* Blah */
header > ul {
	list-style-type: none;
	padding: 0;
	text-align: center;
}

header li {
	display: inline-block;
	margin: 10px 10px 0;
}

header li > a {
	color: white;
	text-decoration: none;
}

header ul {
	font-family: 'pt_sans_narrowregular';
}

/********** White sections **********/

section.white {
	background: white;
	box-sizing: border-box;
	padding: 50px;
}

section.white h2 {
	background: url(img/whiteh2_back.png);
	background-size: 100%;
	float: left;
	height: 0;
	line-height: 0;
	padding-top: 150px;
	padding-bottom: 150px;
	margin: 0;
	margin-right: 50px;
	width:  300px;
	font-family: Century Gothic, sans-serif;
	font-weight: normal;
	font-size: 1.6em;
	color: #d88caa;
}

section.white div {
	text-align: justify;
}

.cwrap {
	position: relative;
}

.cinner {
	top: 50%;
	position: absolute;
	transform: translateY(-50%);
}

/********** About section **********/

#sec_about .cwrap {
	height: 300px;
}

#sec_about .cinner {
	margin-left: 350px;
	color: #417bac;
}

/********** Shape sections **********/

section.shape {
	padding: 50px 0; 
}

ul.hex, ul.pent {
	list-style-type: none;
	padding: 0;
	margin: 0;
}

ul.hex > li, ul.pent > li {
	float: left;
}

/********** Shape sections > hex **********/

ul.hex > li {
	width: 33.3334%;
	display: table;
}

ul.hex > li > div {
	width: 200px;
	height: 231px;
	margin: 0 auto;
	background: url(img/hex.png) no-repeat;
	background-size: 100%;
	box-sizing: border-box;
	color: white;
	font-size: 2em;
}

ul.hex .cinner, ul.pent .cinner  {
	width: 100%;
	text-align: center;
}

#sec_numbers {
	background: url(img/bgimg1.jpg) no-repeat center center;
	background-size: cover;
	font-size: 1.5em;
}

span.small {
	font-size: 0.7em;
}

span.smaller {
	font-size: 0.5em;
}

.large {
	font-size: 1.5em;
}

/********** Shape sections > pent **********/

div.face {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	background-size: 100% !important;
}

.face, .face * {
	backface-visibility: hidden;
	transform-style: preserve-3d;
}

li:nth-child(2n-1) .face:first-child {
	background: url(img/pent.png) no-repeat;
}

li:nth-child(2n-1) .face:last-child {
	background: url(img/pent.png) no-repeat;
	transform: rotateY(180deg);
}

li:nth-child(2n) .face:first-child {
	background: url(img/pent_flip.png) no-repeat;
}

li:nth-child(2n) .face:last-child {
	background: url(img/pent_flip.png) no-repeat;
	transform: rotateY(180deg);
}

.pent > li:not(:first-child):hover > div {
	transform: rotateY(180deg) !important;
}

.pent > li:nth-child(2n-1) .face:first-child > .cinner { margin-top: 8px; }
.pent > li:nth-child(2n-1) .face:last-child > .cinner { margin-top: 17px; }
.pent > li:nth-child(2n)   .cinner { margin-top: -10px; }

.face:last-child > .cinner {
	font-size: 0.5em;
	padding: 0px 30px;
}

/***/

ul.pent {
	margin: 0px auto;
	width: 680px;
	height: 281px;
}

ul.pent > li {
	width: 200px;
	height: 192px;
	position: relative;
	transform-style: preserve-3d;
	margin-left: -30px;
}

ul.pent > li:nth-child(2n) {
	margin-top: 75px;
}

ul.pent > li > div {
	transition: transform 0.4s;
	transform-style: preserve-3d;
}

ul.pent div.face {
	width: 200px;
	height: 192px;
	margin: 0 auto;
	background-size: 100%;
	box-sizing: border-box;
	color: white;
	font-size: 2em;
}

#sec_faq {
	background: url(img/bgimg3.jpg) no-repeat center center;
	background-size: cover;
}

ul.pent .cwrap {
	height: 100%;
}

#icon_student, #icon_award, #icon_people {
	width: 80px;
	height: 80px;
	display: inline-block;
}

#icon_student {
	background: url(img/icon_student.svg) no-repeat 100%;
	margin-top: -28px;
}

#icon_award {
	background: url(img/icon_award.svg) no-repeat 100%;
	margin-top: -10px;
}

#icon_people {
	background: url(img/icon_people.svg) no-repeat 100%;
	margin-top: -28px;
}

/********** Judges and Speakers **********/

#judges, #speakers {
	color: #407cac;
	position: relative;
	float: left;
	width: 100%;
}

#judges li, #speakers li {
	width: 33%;
	float: left;
}

#judges ul, #speakers ul {
	list-style-type: none;
	padding: 0;
}

#judges img, #speakers img {
	width: 100px;
	height: 100px;
	margin: 0 auto;
	background: red;
	display: block;
}

#judges {
	margin: 50px 0 -50px;
}

#speakers {
	margin: 0 0 50px 0;
}

#judges > h2, #speakers > h2 {
	height: 50px;
	line-height: 50px;
	margin: 0;
}

#judges > h2 {
	position: relative;
	width: 250px;
	margin-right: -250px;
	margin-top: 303px;
	float: left;
	text-align: right;
}

#speakers > h2 {
	width: 250px;
	margin-right: -250px;
	margin-left: 550px;
	margin-bottom: 100px;
	text-align: left;
}

#judges > h2::after, #speakers > h2::after {
	display: block;
	content: '';
	width: 2000px;
	height: 100%;
	position: absolute;
	top: 0;
}

#judges > h2::after {
	left: -1750px;
	border-bottom: 1px solid lightblue;
}

#speakers > h2::after {
	border-top: 1px solid lightblue;
}

#judges h3, #speakers h3 {
	font-weight: normal;
	text-align: center;
	font-size: 17pt;
}

#judges h4, #speakers h4 {
	font-weight: normal;
	text-align: center;
	font-size: 12pt;
}

#sec_panel {
	background: url("img/judge-bg.svg") no-repeat center center;
	background-size: 200px;
}

/********** 2B, or not to be? **********/

#hamlet {
	background: url(img/bgimg2.jpg) no-repeat center center;
	background-size: cover;
}

#hamlet span {
	color: white;
	font-size: 32pt;
	font-style: italic;
	font-weight: bold;
	margin-left: 7%;
	margin-top: 100px;
	margin-bottom: 100px;
	display: block;
}

/********** Schedule section **********/

#schedule {
	float: right;
	width: 300px;
	color: #407dac;
	margin: 0;
}

#sec_schedule h2 {
	filter: hue-rotate(90deg);
	-webkit-filter: hue-rotate(90deg);
	margin-top: 40px; /* Another ghastly hack, but I just want to go home now */
}

#schedule span {
	margin-left: -72px;
	position: absolute;
}

#schedule li:nth-child(2n) {
	border: 2px solid #407dac;
	padding: 0.3em;
	max-width: 300px;
	list-style-type: none;
}

/********** Sponsors section **********/

#sponsors {
	margin: 0;
	margin-left: 350px;
}

#sponsors > li {
	display: block;
	float: left;
	margin-top: 33px;
}
#sponsors > li:nth-child(2n-1) {
	margin-right: 10px;
}

#sponsors img {
	width: 200px;
	height: 100px;
}

/* An ugly hack... but it's the eleventh hour */
#sec_sponsors h2 {
	margin-top: 50px;
}

/********** Organized by HackNTU **********/

#organized {
	background: url(img/bgimg4.jpg) no-repeat center center;
	background-size: cover;
}

#organized span {
	color: white;
	opacity: 0.5;
	font-weight: bold;
	width: 100%;
	display: block;
	font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
}

#organized span:first-child {
	font-size: 2em;
}

#organized span:last-child {
	transform: scaleY(1.5);
	font-size: 4em;
}

#organized > .container > div {
	margin: 100px 200px;
}

/********** Map section **********/

#sec_map > iframe {
	border: 0;
}

/********** Contact section **********/

#contact {
	background: url(img/bgimg5.jpg) no-repeat center center;
	background-size: cover;
	color: white;
}

#contact > h2 {
	text-align: center;
	width: 550px;
	margin: 1em auto 2em;
	padding-bottom: 10px;
	border-bottom: 1px solid white;
}

#contact > ul {
	width: 490px;
	margin: 0 auto;
	padding: 0;
	list-style-type: none;
}

#contact li {
	width: 500px;
	padding-left: 50px;
	display: block;
	margin-bottom: 50px;
	background-size: 40px;
}

#contact h3, #contact a {
	margin: 0;
	color: white;
	font-size: 10pt;
}

#contact li:nth-child(1) {
	background: url(img/icon_fb.svg) no-repeat 0 0px;
}

/********** Container **********/

.container {
	max-width: 800px;
	margin: 0 auto;
}

